# specforge

./: .gitignore  CLAUDE.md  README.md  alembic.ini  pyproject.toml
app/: config.py  db.py  main.py
app/models/: orm.py  spec.py
app/routes/: refining.py
app/services/: github_sync.py  refiner.py
app/templates/: base.html  refining_console.html
app/templates/partials/: gate_panel.html  needs_input.html  spec_form.html  sync_result.html
docs/adr/: 0001-alembic-sync-migrations.md
migrations/: env.py
migrations/versions/: b78418939d01_create_core_tables.py
scripts/: seed.py
tests/: conftest.py  test_github_render.py  test_healthz.py  test_persistence.py  test_refiner.py  test_routes.py  test_seed.py  test_spec_model.py  test_sync_flow.py
