[project]
name = "specforge"
version = "0.1.0"
description = "Refine raw user feedback into an implementation-ready spec behind a sync gate."
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "jinja2",
    "sqlalchemy>=2",
    "aiosqlite",
    "alembic",
    "pydantic>=2",
    "pydantic-settings",
    "anthropic",
]

[dependency-groups]
dev = ["pytest", "pytest-asyncio", "httpx", "ruff", "mypy"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ANN", "ASYNC"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]
"migrations/*" = ["ANN", "E501"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["app"]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
